--- a/HTML form & table/BT-Create-form.html
+++ b/HTML form & table/BT-Create-form.html
@@ -12,17 +12,27 @@
     </style>
 </head>
 <body>
-<form method="post" action="Create-form.html">
+<form method="post" action="http://demo.codegym.vn/6/registration_form/register.php">
+
     <label>Họ và tên:</label></br>
+
     <input type="text" name="Name"><br>
+
     <label>Email:</label></br>
-    <input type="text" name="Email"><br>
+
+    <input type="text" name="email"><br>
+
     <label>Số điện thoại</label></br>
-    <input type="text" name="Phone number"><br>
+
+    <input type="text" name="Phone"><br>
+
     <label>Giới tính</label></br>
-    <input name="Sex" type="radio" value="Men">Nam
-    <input name="Sex" type="radio" value="Women">Nữ<br/>
-    <input type="Đăng ký" value="Đăng ký"/></br>
+
+    <input name="Gender" type="radio" value="Men">Nam
+
+    <input name="Gender" type="radio" value="Women">Nữ<br/>
+
+    <input type="submit" value="Đăng ký"/></br>
 </form>
 </body>
 </html>
