--- a/variable-dataType-Operator/TH-declare-use-variable/Bai3.html
+++ b/variable-dataType-Operator/TH-declare-use-variable/Bai3.html
@@ -5,10 +5,16 @@
     <title>Title</title>
 </head>
 <body>
-<script>
-    prompt("Press any button")
 
-    let
-</script>
 </body>
+<script>
+    let a = parseInt(prompt("Enter a"));
+    let b = parseInt(prompt("Enter b"));
+    if(a % b ===0) {
+        alert(a + " là bội số của " + b)
+    } else {
+        alert(a + " không phải là bội số của " + b)
+    }
+
+</script>
 </html>
