--- a/variable-dataType-Operator/TH-use-the-Operator/TH-use-the-operator.html
+++ b/variable-dataType-Operator/TH-use-the-Operator/TH-use-the-operator.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-  <script src="TH-sdtoantu.js"></script>
+  <script src="TH-use-the-operator.js"></script>
 </head>
 <body>
 
